--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <com.line.fastpath.DrawView
+    <com.line.fastpath.drawview.DrawView
         android:id="@+id/fin_draw_view"
         android:layout_width="match_parent"
         android:layout_height="400px"
@@ -20,9 +20,9 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="50px" />
+        android:layout_height="10px" />
 
-    <com.line.fastpath.DrawView
+    <com.line.fastpath.drawview.DrawView
         android:id="@+id/recover_draw_view"
         android:layout_width="match_parent"
         android:layout_height="400px"
@@ -31,8 +31,28 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="重置"
-        android:onClick="reset"/>
+        android:onClick="reset"
+        android:text="重置" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:text="压缩信息:"
+        android:textColor="@color/colorPrimary" />
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/tv_result"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:textColor="@color/colorPrimary"
+            tools:text="原始点数量200，压缩后：60" />
+    </ScrollView>
 
 </LinearLayout>
 
